[gd_scene load_steps=5 format=3 uid="uid://tun6ba5hj472"]

[ext_resource type="Script" path="res://scenes/characters/components/Health/health_component.gd" id="1_sr5bk"]
[ext_resource type="PackedScene" uid="uid://d02vy4lbjhyc3" path="res://misc/system/damage_digit.tscn" id="2_t2r5s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_llaog"]
bg_color = Color(0.262745, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w4s1y"]
bg_color = Color(0.666667, 0, 0, 1)

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_sr5bk")
damage_digit = ExtResource("2_t2r5s")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -66.0
offset_top = 20.0
offset_right = 65.0
offset_bottom = 30.0
theme_override_styles/background = SubResource("StyleBoxFlat_llaog")
theme_override_styles/fill = SubResource("StyleBoxFlat_w4s1y")
value = 50.0
show_percentage = false

[connection signal="change_health" from="." to="." method="_on_change_health"]
